...
      while (sum == 0 && index < parent.children.length) {
        sum = parent.children[index++].value;
      }
      var minimum = sum;
      var maximum = sum;
      final alpha = math.max(dy / dx, dx / dy) / (remaining * ratio);
      var beta = sum * sum * alpha;
      var best = math.max(maximum / beta, beta / minimum);
      while (index < parent.children.length) {
        final value = parent.children[index].value;
        sum += value;
        minimum = math.min(minimum, value);
        maximum = math.max(maximum, value);
...
